--- a/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
+++ b/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Object Detection Demo\n",
+    "# Object Detection in Video Clip Demo\n",
     "Welcome to the object detection inference walkthrough!  This notebook will walk you step by step through the process of using a pre-trained model to detect objects in an image. Make sure to follow the [installation instructions](https://github.com/tensorflow/models/blob/master/research/object_detection/g3doc/installation.md) before you start."
    ]
   },
