--- a/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
+++ b/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
@@ -471,7 +471,7 @@
      "output_type": "stream",
      "text": [
       "[MoviePy] Done.\n",
-      "[MoviePy] >>>> Video ready: videos_out/cars_ppl_out.mp4 \n",
+      "[MoviePy] >>>> Video ready: videos_out/cars_out.mp4 \n",
       "\n",
       "CPU times: user 1h 22min 33s, sys: 1min 45s, total: 1h 24min 19s\n",
       "Wall time: 18min 27s\n"
@@ -487,8 +487,8 @@
     }
    ],
    "source": [
-    "filename = 'videos_in/cars_ppl.mp4'\n",
-    "new_loc = 'videos_out/cars_ppl_out.mp4'\n",
+    "filename = 'videos_in/cars.mp4'\n",
+    "new_loc = 'videos_out/cars_out.mp4'\n",
     "\n",
     "counter = 0\n",
     "\n",
