--- a/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
+++ b/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
@@ -48,8 +48,8 @@
     "sys.path.append(\"..\")\n",
     "from object_detection.utils import ops as utils_ops\n",
     "\n",
-    "from utils import label_map_util\n",
-    "from utils import visualization_utils as vis_util"
+    "from object_detection.utils import label_map_util\n",
+    "from object_detection.utils import visualization_utils as vis_util"
    ]
   },
   {
