--- a/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
+++ b/Mask_RCNN_Exam1/Mask_RCNN_Videos.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# Path to frozen detection graph. This is the actual model that is used for the object detection.\n",
-    "PATH_TO_CKPT = '/home/priya/Documents/mask_rcnn/mask_rcnn_inception_v2_coco_2018_01_28' + '/frozen_inference_graph.pb'\n",
+    "PATH_TO_CKPT = 'mask_rcnn_inception_v2_coco_2018_01_28' + '/frozen_inference_graph.pb'",
     "\n",
     "# List of the strings that is used to add correct label for each box.\n",
     "PATH_TO_LABELS = os.path.join('data', 'mscoco_label_map.pbtxt')\n",
